feat(prd-01): 前端枚举中文化 + 审核列表昵称搜索 + 规范落地
- 前端: 6类枚举映射(认证状态/学历/感情/婚姻/脱单/认证方式)全部中文化
- 前端: 认证审核+内容审核搜索改为昵称模糊匹配，移除冗余用户ID列
- 后端: ModerationAdminService 新增 keyword 昵称模糊搜索
- 规范: TEAM_STANDARDS.md 新增 8.8/8.9 枚举值中文化规范
- 文档: 更新测试报告/测试用例/技术方案，同步所有变更
- 测试: L4 21/21 通过，TypeScript 编译通过，Maven 编译通过